[package]
name = "mdbook-open-gh-issue"
version = "0.1.1"
authors = ["Vytautas Stankevičius <vytstank@gmail.com>"]
description = "mdbook preprocessor to add a open-on-github link on every page"
license = "MPL-2.0"
homepage = "https://github.com/vytstank/mdbook-open-gh-issue"
repository = "https://github.com/vytstank/mdbook-open-gh-issue"
documentation = "https://github.com/vytstank/mdbook-open-gh-issue"
readme = "README.md"
keywords = ["mdbook"]
exclude = [".github/"]
edition = "2018"

[dependencies]
mdbook = "0.4.36"
env_logger = "0.10"
log = "0.4"
clap = { version = "4.1.0", features = ["cargo"] }
serde_json = "1.0"
toml = "0.5.11"
semver = "1.0.20"
